syntax = "proto3";

package product_to_enroll;

message ClassIdsRequest {
  repeated int64 class_ids = 1;
};

message InstructorIdsRequest {
  repeated string instructor_ids = 1;
};

message InstructorsClassesResponse {
  repeated InstructorClass instructors_classes_ids = 1;
};

message StudentsClassesResponse {
  repeated StudentClass students_classes_ids = 1;
}

message InstructorClass {
  string instructor_id = 1;
  int64 class_id = 2; 
};

message StudentClass {
  string student_id = 1;
  int64 class_id = 2;
  string payment_status = 3;
};

message EnrollInstructorsInClassRequest {
  int64 class_id = 1;
  repeated string instructor_ids = 2;
};

message EnrollInstructorsInClassResponse {
  bool success = 1;
};


message GetStudentClassesRequest {
  string student_id = 1;
}

message GetStudentClassesResponse {
  repeated StudentClass student_classes = 1;
}

message GetMostPopularCoursesIdsRequest {
  repeated int64 considered_courses_ids = 1;
  int32 topK = 2;
}

message InstructorData {
  string instructor_id = 1;
  string instructor_name = 2;
  string instructor_surname = 3;
}

message MostPopularCourseIdAndInstructors {
  int64 course_id = 1;
  repeated InstructorData instructors_data = 2;
}

message GetMostPopularCoursesIdsResponse {
  repeated MostPopularCourseIdAndInstructors courses_instructors = 1;
}